# ezra

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
scripts/: refresh-repos.sh  setup.sh
src/docbot/: __main__.py  config.py  logging_setup.py  refresher.py
src/docbot/claude_runner/: runner.py
src/docbot/github/: pr.py
src/docbot/orchestrator/: orchestrator.py
src/docbot/slack/: dm.py  listener.py  reactions.py
src/docbot/worktree/: pool.py
systemd/: docbot-refresh.service  docbot-refresh.timer  docbot.service
tests/unit/: test_claude_runner.py  test_config.py  test_dm.py  test_github_pr.py  test_logging.py  test_orchestrator.py  test_reactions.py  test_refresher.py  test_worktree_pool.py
