[project]
name = "docbot"
version = "0.1.0"
description = "Slack-driven docs PR bot — generic, configurable"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.18",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]

[project.scripts]
docbot = "docbot.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
